# manget

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
src/: bind.rs  main.rs  parse.rs  search.rs
